--- a/security/libtasn1/Makefile
+++ b/security/libtasn1/Makefile
@@ -2,7 +2,7 @@
 # $FreeBSD$
 
 PORTNAME=	libtasn1
-PORTVERSION=	4.2
+PORTVERSION=	4.4
 CATEGORIES=	security
 MASTER_SITES=	${MASTER_SITE_GNU}
 MASTER_SITE_SUBDIR=	libtasn1
@@ -11,9 +11,10 @@ MAINTAINER=	novel@FreeBSD.org
 COMMENT=	ASN.1 structure parser library
 
 USE_LDCONFIG=	yes
-USES=		pkgconfig pathfix gmake libtool
+USES=		cpe pkgconfig pathfix gmake libtool
 GNU_CONFIGURE=	yes
 INSTALL_TARGET=	install-strip
+CPE_VENDOR=	gnu
 
 OPTIONS_DEFINE=	DOCS
 
