--- a/lang/ruby20/Makefile
+++ b/lang/ruby20/Makefile
@@ -83,7 +83,7 @@ _SUF1=	_${PORTREVISION}
 
 CPPFLAGS+=	-I${LOCALBASE}/include
 # Keep this, else ruby will fail to load libraries dependent op libpthread.
-LIBS+=		-L${LOCALBASE}/lib ${PTHREAD_LIBS}
+LIBS+=		-lpthread -L${LOCALBASE}/lib
 
 .if ${OPSYS} == "FreeBSD"
 .if exists(/usr/sbin/dtrace) && (${OSVERSION} > 1100032) && (${ARCH} == "amd64" || ${ARCH} == "i386")
@@ -91,6 +91,10 @@ CONFIGURE_ARGS+=	--enable-dtrace
 .else
 CONFIGURE_ARGS+=	--disable-dtrace
 .endif
+.endif
+
+.if ${ARCH} == "armv6" || ${ARCH} == "armv6hf"
+CONFIGURE_ARGS+=	--with-setjmp-type=_setjmp
 .endif
 
 CONFIGURE_ENV=	debugflags=
@@ -137,7 +141,7 @@ RB_SET_CONF_VAR=${SH} -c '${REINPLACE_CMD} -E -e "s,(CONFIG\[\"$$0\"\][[:space:]
 
 post-patch:
 	@${REINPLACE_CMD} -E \
-		-e 's,-l$$pthread_lib,${PTHREAD_LIBS},g' \
+		-e 's,-l$$pthread_lib,-lpthread,g' \
 		-e '/^RUBY_LIB_PATH/s,\.\$$\{TEENY\},,' \
 		-e '/^RUBY_SITE_LIB_PATH2/s,\.\$$\{TEENY\},,' \
 		-e '/^RUBY_VENDOR_LIB_PATH2/s,\.\$$\{TEENY\},,' \
@@ -212,7 +216,7 @@ post-install:
 #
 .if ${RUBY_VER} == ${RUBY_DEFAULT_VER}
 . for FILE in ${INSTALLED_SCRIPTS}
-	${LN} -f ${STAGEDIR}${PREFIX}/bin/${FILE}${RUBY_SUFFIX} ${STAGEDIR}${PREFIX}/bin/${FILE}
+	${LN} -fs ${FILE}${RUBY_SUFFIX} ${STAGEDIR}${PREFIX}/bin/${FILE}
 . endfor
 .endif
 
